# ieee_chatbot

./: .gitignore  README.md  chat.html  fetch_tweets.py  fix_prompt.py  fix_retrieval.py  get_embed_test.py  index.html  ingest.py  main.py  pyproject.toml  render.yaml  requirements.txt  scrape_tweets.py  style.css  test_chat.html
data/: chunks.pkl  vector_store.pkl
data/extra_docs/: club_info.txt  twitter.txt
